--- a/admin/index.html
+++ b/admin/index.html
@@ -10,7 +10,8 @@
     <meta name="keywords" content="au theme template">
 
     <!-- Title Page-->
-    <title>Dashboard</title>
+    <title>How's Life</title>
+    <link rel="shortcut icon" href="images/icon/logo-hw-white.png" type="image/x-icon">
 
     <!-- Fontfaces CSS-->
     <link href="css/font-face.css" rel="stylesheet" media="all">
