--- a/login/Login.html
+++ b/login/Login.html
@@ -22,6 +22,7 @@
         </div>
 
         <div class="containerB">
+            <!-- <a href="/admin/index.html"><input type="button" value="MASUK" class="buttonSize"></a> -->
             <input type="button" value="MASUK" class="buttonSize">
         </div>
     </div>
