--- a/admin/konselor.html
+++ b/admin/konselor.html
@@ -159,199 +159,10 @@
                 <div class="section__content section__content--p30">
                     <div class="container-fluid">
                         
-                        <div class="row">
+                        <div class="row" id="daftarKonselor">
 
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <strong class="card-title mb-3">Dokter</strong>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="mx-auto d-block">
-                                            <img class="rounded-circle mx-auto d-block" src="images/icon/avatar-01.jpg" alt="Card image cap">
-                                            <h5 class="text-sm-center mt-2 mb-1">Dr. Saepullah Anwar</h5>
-                                            <hr>
-                                            <h5 class="text-sm-center mt-2 mb-1">Profesional</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
 
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <strong class="card-title mb-3">Dokter</strong>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="mx-auto d-block">
-                                            <img class="rounded-circle mx-auto d-block" src="images/icon/avatar-01.jpg" alt="Card image cap">
-                                            <h5 class="text-sm-center mt-2 mb-1">Dr. Saepullah Anwar</h5>
-                                            <hr>
-                                            <h5 class="text-sm-center mt-2 mb-1">Profesional</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
 
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <strong class="card-title mb-3">Dokter</strong>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="mx-auto d-block">
-                                            <img class="rounded-circle mx-auto d-block" src="images/icon/avatar-01.jpg" alt="Card image cap">
-                                            <h5 class="text-sm-center mt-2 mb-1">Dr. Saepullah Anwar</h5>
-                                            <hr>
-                                            <h5 class="text-sm-center mt-2 mb-1">Profesional</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <strong class="card-title mb-3">Dokter</strong>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="mx-auto d-block">
-                                            <img class="rounded-circle mx-auto d-block" src="images/icon/avatar-01.jpg" alt="Card image cap">
-                                            <h5 class="text-sm-center mt-2 mb-1">Dr. Saepullah Anwar</h5>
-                                            <hr>
-                                            <h5 class="text-sm-center mt-2 mb-1">Profesional</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <strong class="card-title mb-3">Dokter</strong>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="mx-auto d-block">
-                                            <img class="rounded-circle mx-auto d-block" src="images/icon/avatar-01.jpg" alt="Card image cap">
-                                            <h5 class="text-sm-center mt-2 mb-1">Dr. Saepullah Anwar</h5>
-                                            <hr>
-                                            <h5 class="text-sm-center mt-2 mb-1">Profesional</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <strong class="card-title mb-3">Dokter</strong>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="mx-auto d-block">
-                                            <img class="rounded-circle mx-auto d-block" src="images/icon/avatar-01.jpg" alt="Card image cap">
-                                            <h5 class="text-sm-center mt-2 mb-1">Dr. Saepullah Anwar</h5>
-                                            <hr>
-                                            <h5 class="text-sm-center mt-2 mb-1">Profesional</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <strong class="card-title mb-3">Dokter</strong>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="mx-auto d-block">
-                                            <img class="rounded-circle mx-auto d-block" src="images/icon/avatar-01.jpg" alt="Card image cap">
-                                            <h5 class="text-sm-center mt-2 mb-1">Dr. Saepullah Anwar</h5>
-                                            <hr>
-                                            <h5 class="text-sm-center mt-2 mb-1">Profesional</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <strong class="card-title mb-3">Dokter</strong>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="mx-auto d-block">
-                                            <img class="rounded-circle mx-auto d-block" src="images/icon/avatar-01.jpg" alt="Card image cap">
-                                            <h5 class="text-sm-center mt-2 mb-1">Dr. Saepullah Anwar</h5>
-                                            <hr>
-                                            <h5 class="text-sm-center mt-2 mb-1">Profesional</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <strong class="card-title mb-3">Dokter</strong>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="mx-auto d-block">
-                                            <img class="rounded-circle mx-auto d-block" src="images/icon/avatar-01.jpg" alt="Card image cap">
-                                            <h5 class="text-sm-center mt-2 mb-1">Dr. Saepullah Anwar</h5>
-                                            <hr>
-                                            <h5 class="text-sm-center mt-2 mb-1">Profesional</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <strong class="card-title mb-3">Dokter</strong>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="mx-auto d-block">
-                                            <img class="rounded-circle mx-auto d-block" src="images/icon/avatar-01.jpg" alt="Card image cap">
-                                            <h5 class="text-sm-center mt-2 mb-1">Dr. Saepullah Anwar</h5>
-                                            <hr>
-                                            <h5 class="text-sm-center mt-2 mb-1">Profesional</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <strong class="card-title mb-3">Dokter</strong>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="mx-auto d-block">
-                                            <img class="rounded-circle mx-auto d-block" src="images/icon/avatar-01.jpg" alt="Card image cap">
-                                            <h5 class="text-sm-center mt-2 mb-1">Dr. Saepullah Anwar</h5>
-                                            <hr>
-                                            <h5 class="text-sm-center mt-2 mb-1">Profesional</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <strong class="card-title mb-3">Dokter</strong>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="mx-auto d-block">
-                                            <img class="rounded-circle mx-auto d-block" src="images/icon/avatar-01.jpg" alt="Card image cap">
-                                            <h5 class="text-sm-center mt-2 mb-1">Dr. Saepullah Anwar</h5>
-                                            <hr>
-                                            <h5 class="text-sm-center mt-2 mb-1">Profesional</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
 
                     </div>
@@ -362,6 +173,10 @@
         </div>
 
     </div>
+
+    <!-- connect BE  -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./API/konselor.js"></script>
 
     <!-- Jquery JS-->
     <script src="vendor/jquery-3.2.1.min.js"></script>
