--- a/admin/konsultasi.html
+++ b/admin/konsultasi.html
@@ -151,7 +151,7 @@
         <div class="page-container" style="background-color: #3A5BA0;">
             <!-- HEADER DESKTOP-->
             <header class="header-desktop" style="background-color: #FFE5B4; height: auto;">
-                <h1 style="text-align: center; font-size: 70px;">HOWSLIFE </h1>
+                <h1 style="text-align: center; font-size: 70px;">HOW'S  LIFE </h1>
             </header>
             <!-- HEADER DESKTOP-->
 
