--- a/login/Login.html
+++ b/login/Login.html
@@ -22,8 +22,8 @@
         </div>
 
         <div class="containerB">
-            <!-- <a href="/admin/index.html"><input type="button" value="MASUK" class="buttonSize"></a> -->
-            <input type="button" value="MASUK" class="buttonSize">
+            <a href="/admin/index.html"><input type="button" value="MASUK" class="buttonSize"></a>
+            <!--<input type="button" value="MASUK" class="buttonSize"> -->
         </div>
     </div>
 </body>
