--- a/admin/s1.html
+++ b/admin/s1.html
@@ -161,11 +161,11 @@
                     <div class="container-fluid">
                         
                         <div class="row">
-                            <div class="col-lg-12" style="padding-bottom: 100%;">
+                            <div class="col-lg-10" style="padding-bottom: 100%;">
                                 <div class="au-card m-b-30">
                                     <div class="au-card-inner">
                                         <h3 class="title-10 m-b-40">Bar chart Subjek Masalah</h3>
-                                        <canvas id="mybarChart"></canvas>
+                                        <canvas id="mybarChart" width="400" height="200"></canvas>
                                     </div>
                                 </div>
                             </div>
