--- a/admin/s3.html
+++ b/admin/s3.html
@@ -206,43 +206,60 @@
     <!-- Main JS-->
     <script src="js/main.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
         const ctx = document.getElementById('myChart');
-        const myChart = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: ['10-15 th', '15-20 th', '20-25 th', '25-30 th', '30-35 th', '35-40 th'],
-                datasets: [{
-                    label: '# of Votes',
-                    data: [67, 30, 45, 68, 23, 38],
-                    backgroundColor: [
-                        '#F9ED69',
-                        '#F08A5D',
-                        '#B83B5E',
-                        '#6A2C70',
-                        '#F38181',
-                        '#3F72AF'
-                    ],
-                    borderColor: [
-                        'white',
-                        'white',
-                        'white',
-                        'white',
-                        'white',
-                        'white'
-                        
-                    ],
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                scales: {
-                    y: {
-                        beginAtZero: true
+
+        const getData = async () => {
+            try {
+                const { data } = await axios.get('https://howslifeapi.herokuapp.com/api/v1/admin/statistik/pasienumur', ) 
+                const label = data.data.map((iter) => {
+                    return iter.age + ' th'
+                })
+
+                const value = data.data.map((iter) => {
+                    return iter.jmlh
+                })
+                const myChart = new Chart(ctx, {
+                    type: 'bar',
+                    data: {
+                        labels: label,
+                        datasets: [{
+                            label: '# of Votes',
+                            data: value,
+                            backgroundColor: [
+                                '#F9ED69',
+                                '#F08A5D',
+                                '#B83B5E',
+                                '#6A2C70',
+                                '#F38181',
+                                '#3F72AF'
+                            ],
+                            borderColor: [
+                                'white',
+                                'white',
+                                'white',
+                                'white',
+                                'white',
+                                'white'
+                                
+                            ],
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        scales: {
+                            y: {
+                                beginAtZero: true
+                            }
+                        }
                     }
-                }
+                })
+            } catch (error) {
+                ctx.parentElement.innerHTML = `<p>${error}  ${error.response.data} 😥</p>`
             }
-        });
+        }
+        getData()
         </script>
 
 </body>
