--- a/admin/artikel.html
+++ b/admin/artikel.html
@@ -205,7 +205,7 @@
                             </div>
                             
                             <div style="text-align: center; padding-bottom: 100%; ">
-                                <a href="add-artikel.html"><button type="submit" style="width: 500px; height: 100px; background-color: aliceblue; border-radius: 70px;"> Tambah Artikel</button></a>
+                                <a href="add-artikel.html"><button type="submit" style="width: 500px; height: 100px; background-color: #FFE5B4; border-radius: 70px;"> Tambah Artikel</button></a>
                             </div>
                             
                         </div>
