--- a/admin/index.html
+++ b/admin/index.html
@@ -224,7 +224,7 @@
 
                         </div>
 
-                        <div class="row">
+                        <div class="row" style="padding-bottom: 100%;">
                         
                             <div class="col-lg-6">
                                 <div class="au-card au-card--no-shadow au-card--no-pad m-b-40">
