--- a/admin/request.html
+++ b/admin/request.html
@@ -156,12 +156,10 @@
             <!-- HEADER DESKTOP-->
 
             <!-- MAIN CONTENT-->
-            <div class="main-content">
+            <div class="main-content" style="padding-bottom: 100%;">
                 <div class="section__content section__content--p30">
                     <div class="container-fluid" id="daftarRequest">
 
-                        
-                        
                     </div>
                 </div>
             </div>
